<resources>
    <string name="app_name">Travelnote</string>
    <string name="facebook_application_id" translatable="false">866666736838560</string>
    <string name="fb_login_protocol_scheme">fb866666736838560</string>
    <string name="fb_login_cancel_toast">Loginvorgang abgebrochen</string>
    <string name="fb_login_error_toast">Fehler bei Login.</string>
    <string name="start_btn_name">Ohne Login starten.</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_share">Teilen</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="logout">Logout</string>
    <string name="delete_diary">Tagebuch löschen</string>
    <string name="delete_coordinates">Eigene Standorte löschen</string>
    <string name="new_db_entry">Neuer Eintrag</string>
    <string name="no_db_entry_available">Noch kein Eintrag verfügbar</string>
    <string name="diary_deleted_toast">Alle Tagebucheinträge wurden gelöscht.</string>
    <string name="marker_deleted_toast">Alle Standorteinträge wurden gelöscht.</string>
    <string name="DB_is_empty">Dieses Tagebuch ist leer.</string>
    <string name="Mail_Head">Mein Reisetagebuch</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_diary">Tagebuch</string>
    <string name="menu_title_map">Karte</string>
    <string name="menu_title_profile">Profil</string>
    <string name="delete_db_diary_entries_warning_title">Tagebucheinträge löschen</string>
    <string name="delete_db_diary_entries_warning_long">Willst Du wirklich alle Tagebucheinträge unwiderruflich löschen? \nZugehörige Orte werden auch gelöscht!</string>
    <string name="delete_db_gallery_entries_warning_title">Bildeinträge löschen</string>
    <string name="delete_db_gallery_entries_warning_long">Willst Du wirklich alle Bildeinträge unwiderruflich löschen?</string>
    <string name="delete_db_single_diary_entry_warning_title">Tagebucheintrag löschen</string>
    <string name="delete_db_single_diary_entry_warning_long">Willst Du diesen Tagebucheintrag wirklich dauerhaft löschen?\nDer Ort wird nicht gelöscht.</string>
    <string name="delete_db_map_entries_warning_title">Standorteinträge löschen</string>
    <string name="delete_db_map_entries_warning_long">Willst Du wirklich alle Standorteinträge unwiderruflich löschen?</string>
    <string name="delete_single_location_entry_warning_title">Standort löschen</string>
    <string name="delete_single_location_entry_warning_long">Willst Du diesen Standort wirklich dauerhaft löschen?.</string>
    <string name="share_diary_entry_text">Versende den ausgewählten Tagebucheintrag mit Deiner Lieblingsapp.</string>
    <string name="better_not">Lieber doch nicht.</string>
    <string name="go">Und los!</string>
    <string name="no_entry_chosen">Kein Eintrag...</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_map_button_text">Zur Karte</string>
    <string name="to_gallery_button_text">Neues Galeriebild</string>
    <string name="new_diary_entry_button_text">Neuer Tagebucheintrag</string>
    <string name="menu_title_gallery">Galerie</string>
    <string name="send_per_mail">Tagebucheinträge per Mail senden</string>
    <string name="unkown_address">Unbekannte Adresse</string>
    <string name="mark_location">Standort markieren</string>
    <string name="mark_location_message">Markiere deinen aktuellen Standort.</string>

    <string name="gallery_string">Urlaubsalbum</string>
    <string name="gallery_headline">Erstelle dein Album oder füge Bilder zu deinem bestehenden Album hinzu.</string>
    <string name="choose_pics_btn">Wähle deine Bilder</string>
    <string name="add_pics_btn">Füge Bilder zu Album hinzu</string>
    <string name="no_pic_chosen">Kein Bild ausgewählt</string>
    <string name="delete_gallery">Album löschen</string>
    <string name="cant_access_device">Travelnote darf leider nicht auf Deine Bilder zugreifen.</string>
    <string name="no_image">Kein Eintrag vorhanden!</string>
    <string name="all_pics_delete">Alle Bildeinträge wurden gelöscht.</string>
    <string name="couldnt_be_deleted">Bildeinträge konnten nicht gelöscht werden.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Passwort (optional)</string>
    <string name="action_sign_in">Einloggen oder registrieren</string>
    <string name="action_sign_in_short">Einloggen</string>
    <string name="error_invalid_email">Ungültige E-Mail Adresse</string>
    <string name="error_invalid_password">Das Passwort ist zu kurz</string>
    <string name="error_incorrect_password">Falsches Passwort oder Benutzername</string>
    <string name="error_field_required">Dieses Feld wird benötigt</string>
    <string name="permission_rationale">"Kontakt-Erlaubnis wird für die E-Mail Vervollständigung benötigt."</string>
    <string name="hello_settings_text">Hallo</string>
    <string name="default_hello_settings_text">Guten Tag!</string>
    <string name="logout_text">Logout</string>
    <string name="show_marker_all_users">Zeige alle Nutzer-Standorte</string>
    <string name="mark_current_location">Aktuellen Standort makieren</string>
    <string name="no_entries_different_users">Keine Einträge anderer Nutzer vorhanden!</string>
    <string name="failed_location_permission">Travelnote hat keine Erlaubnis Deinen Standort abzurufen.</string>
    <string name="current_location_marked_success">Ihr aktueller Standort wurde makiert!</string>
    <string name="conn_play_services_failed">Verbindung zu Google Play Services nicht möglich.</string>
    <string name="entry_success">Eintrag erfolgreich</string>
    <string name="entry_failed">Eintrag konnte nicht dauerhaft gespeichert werden.</string>
    <string name="location_missing">Bitte gebe einen Ort ein!</string>
    <string name="map_entry_failed">Entschuldigung. Ort konnte nicht auf Karte gespeichert werden.</string>
    <string name="map_display_failed">Karte kann nicht angezeigt werden.</string>
    <string name="fields_missing_text">Bitte fülle alle Felder aus!</string>
    <string name="location_hint_map_marker">Wo warst Du schon? (Ort/Land)</string>
    <string name="title_activity_show_location_list">ShowLocationListActivity</string>
    <string name="diary_entry_hint_title">Dein Tagebucheintrag Titel</string>
    <string name="diary_entry_hint_content">Schreibe über deine Erlebnisse!</string>
    <string name="diary_entry_hint_location">Gib hier Ort oder Land ein</string>
    <string name="diary_entry_hint_date">Datum</string>
    <string name="diary_entry_button_text">Jetzt eintragen!</string>
    <string name="failed_saving_entry">Eintrag konnte nicht gespeichert werden!</string>
    <string name="entry_successful_toast">Eintrag erfolgreich gespeichert</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="opening_text_share_mail">Hey, anbei findest du meine Travelnotes. Viel Spaß damit!</string>
    <string name="subject_text_share_mail">Reisetagebuch von </string>
    <string name="intent_text_share_diary_mail">Versende Tagebucheinträge..</string>
    <string name="no_diary_entries_text">Keine Einträge vorhanden!\nStarte jetzt mit einem neuen Eintrag.</string>
    <string name="location_determination_failed">Ihr eingegebener Ort konnte nicht gefunden werden.</string>
    <string name="no_internet_text_title">Keine Internetverbindung.</string>
    <string name="no_internet_text_explanation">Travelnote benötigt Internet, um Dich anzumelden. Bitte überprüfe Deine Internetverbindung und starte die App dann erneut.</string>
    <string name="login_not_possible_text">Login nicht möglich.\\n Versuchen Sie es später erneut!</string>
    <string name="show_saved_locations_text">Zeige gespeicherte Standorte</string>
    <string name="logo_travelnote">Logo Travelnote</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="new_gallery_toolbar_text">Neues Galeriebild</string>
    <string name="standordfreigabe">Standortfreigabe</string>
    <string name="enable_network_location">Du musst Deinen Netzwerk-Standort freigeben, damit Travelnote Deinen Standort markieren kann.</string>
    <string name="cant_access_photos">Travelnote scheint nicht auf deine Bilder zugreifen zu dürfen.</string>
    <string name="your_locations">Deine Standorte</string>
    <string name="entry_deleted">Eintrag wurde gelöscht</string>

</resources>
