<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_title_home" />

    <item
        android:id="@+id/navigation_diary"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/menu_title_diary" />
    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_image_black_24dp"
        android:title="@string/menu_title_gallery" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/menu_title_map" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_title_settings" />

</menu>
