<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <item
        android:id="@+id/action_get_gps_location"
        android:enabled="true"
        android:title="@string/mark_current_location"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_show_marker_all_user"
        android:enabled="true"
        android:title="@string/show_marker_all_users"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_coordinates"
        android:enabled="true"
        android:title="@string/delete_coordinates"
        android:visible="true"
        app:showAsAction="never"/>


</menu>